# pbr

./: .gitmodules  Cargo.toml  Justfile  rust-toolchain.toml
core/: Cargo.toml  build.rs
core/src/: bounds.rs  geom.rs  interaction.rs  lib.rs  macros.rs  math.rs  primitive.rs  ray.rs  shape.rs  spectrum.rs  transform.rs  types.rs
core/src/geom/: macros.rs  normal.rs  point.rs  vector.rs
core/src/math/: matrix4x4.rs
docs/: header.html
mimalloc-sys/: Cargo.toml  build.rs
mimalloc-sys/src/: lib.rs
openexr/: Cargo.toml
openexr-sys/: Cargo.toml  build.rs  wrapper.h
openexr-sys/src/: attr.rs  base.rs  chunkio.rs  coding.rs  context.rs  debug.rs  decode.rs  encode.rs  errors.rs  lib.rs  part.rs
openexr/examples/: exrinfo.rs
openexr/src/: core.rs  lib.rs
openexr/src/core/: alloc.rs  context.rs  error.rs
