[package]
name = "pbr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive", "min_const_generics", "zeroable_maybe_uninit", "extern_crate_std"] }
paste = "1.0.6"
cblas = "0.4.0"
lapacke = "0.5.0"
openblas-src = { version = "0.10.4", features = ["system"] }
approx = "0.5.1"
derive_more = "0.99.17"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[build-dependencies]
pkg-config = "0.3.24"