[package]
name = "openexr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openexr-sys = { path = "../openexr-sys" }
libc = "0.2.117"
semver = "1.0.5"
rgb = "0.8.31"
io-lifetimes = "0.5.1"
os_str_bytes = "6.0.0"
strum = { version = "0.23.0", features = ["derive"] }
log = "0.4.14"
parking_lot = "0.12.0"
errno = "0.2.8"

[dev-dependencies]
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "0.9.0"